# worldmonitor-agentic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  README.md  VERIFIED_API.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: builder.md  checker.md  judge.md  orient.md  planner.md  test-author.md
.claude/hooks/: no-master-commit.sh  scope-guard.sh  secret-scan.sh  test-strictness.sh  tests-green.sh
.github/workflows/: adr-index.yml  compose-boot.yml  ftm-schema.yml  integration.yml  quality.yml  security.yml
deploy/: compose.yaml
deploy/backup/: backup.sh  restore.sh
deploy/hermes/: README.md  config.yaml
deploy/prometheus/: README.md  prometheus.yml
docs/: 00_VISION_AND_SCOPE.md  10_ARCHITECTURE.md  20_ONTOLOGY.md  30_PLUGIN_FRAMEWORK.md  40_ROADMAP.md  50_AGENT_LAYER.md  60_API_AND_MCP.md  70_UI_AND_EXPERIENCE.md  ARCHITECTURE_REVIEW.md  GATE_LEDGER.md  README.md  worldmonitorphase0.bundle
docs/decisions/: 0016-splink-expert-set-weights.md  0017-app-layer-tenant-isolation.md  0018-provenance-as-ftm-context-properties.md  0019-batch-vs-streaming-resolution.md  0020-merge-guard-thresholds.md  0021-raw-lands-before-mapping.md  0022-strict-schema-validation.md  0023-edge-materialization-v0-limitations.md  0024-merge-guard-alert-mode-build-phase.md  0025-referent-rewriting.md  0026-batch-first-resolution.md  0027-ingest-windowed-bounded-deadletter.md  0028-per-batch-resolver-isolation.md  0029-ingest-driver-gate-a.md  0030-alembic-migrations.md  0031-return-to-block-signoff.md  0032-cheap-hardening.md  0033-neo4j-bounded-memory.md  0034-compose-boot-validation.md  0035-multiscript-name-canonicalization.md  0036-deterministic-canonical-id.md  0037-transitive-negative-judgement.md  0038-per-batch-exception-isolation.md  0039-er-distinguishing-evidence.md  0040-er-anchor-conflict-negative-evidence.md  0041-resolution-signoff-integrity.md  0042-single-tenancy-teardown.md  0043-er-measurement-harness-em-weights.md  0044-anchor-preferred-stable-ids.md  0045-value-level-provenance.md  0046-abstract-thing-range-edges.md  0047-fail-closed-sensitivity-guard.md  0048-ftm-valid-injective-durable-id.md  0049-cross-store-gdpr-source-erasure.md  0050-backup-restore-disaster-recovery.md  0051-driver-supervision-containerization.md  0052-geonames-bounded-streaming-and-path-confinement.md  0053-dead-letter-retention.md  0054-driver-connector-retry-backoff.md  0055-fail-closed-edge-provenance.md  (+74 more)
docs/fable-review/: 00_FABLE_REVIEW_BRIEF.md  10_SYSTEM_DIGEST.md  20_DECISION_REGISTER.md  30_CONSTRAINTS_AND_FREEDOMS.md  40_REVIEW_CHARTER.md  50_FABLE_REVIEW.md  60_TOTAL_QUESTIONNAIRE.md  70_EXECUTION_HANDOFF.md  80_LOG_CAPTURE_CONSULT.md  81_PRECUTOVER_GATE_SEQUENCE.md  82_GATE_3B_CUTOVER_PLAN.md  90_REREVIEW_2026-07-11.md  91_OG_HARVEST_BACKLOG.md  KICKOFF_PROMPT.md  README.md
docs/reviews/: ADR_GAP_SWEEP_0024_PLUS.md  CROSS_WORKFLOW_REVIEW.md  CROSS_WORKFLOW_REVIEW_RUBRIC.md  GATE_0_SPEC.md  GATE_1A_REVIEW_QUEUE_UI_SPEC.md  GATE_2B_BACKFILL_SPEC.md  GATE_3A_II_A_INCREMENTAL_FOLD_CORRECTNESS_SPEC.md  GATE_3A_II_B_REBUILD_DIFF_GUARD_SPEC.md  GATE_A_ER_HARNESS_SPEC.md  GATE_B3_SPEC.md  GATE_B4A_ERASURE_SPEC.md  GATE_B4B_BACKUP_RESTORE_SPEC.md  GATE_B4C_DRIVER_SUPERVISION_SPEC.md  GATE_B4D_DEADLETTER_PRUNING_SPEC.md  GATE_B5_SPEC.md  GATE_B6_SPEC.md  GATE_B_FRONT_STABLE_IDS_SPEC.md  GATE_B_LANDING_GC_SAFETY_SPEC.md  GATE_CID_FIX_SPEC.md  GATE_C_GUARDED_STREAM_HEADER_STRIP_SPEC.md  GATE_C_VALUE_PROVENANCE_SPEC.md  GATE_D_ABSTRACT_EDGES_SPEC.md  GATE_D_PROMTOOL_CI_SPEC.md  GATE_E_SENSITIVITY_GUARD_SPEC.md  GATE_F1_FRESHNESS_SURFACE_SPEC.md  GATE_F2_DURABLE_EGRESS_AUDIT_SPEC.md  GATE_F2_MCP_CONTRACT_POLISH_SPEC.md  GATE_F3_ENTITY_DOSSIER_SPEC.md  GATE_F4_MCP_PROMPTS_SPEC.md  GATE_F5_SUMMARY_FLAG_SPEC.md  GATE_F6_WM_CLI_SPEC.md  GATE_F8_MCP_LIVE_SMOKE_SPEC.md  GATE_H6H7_GEONAMES_OOM_LFI_SPEC.md  GATE_H8B_MAINTENANCE_RESOLVE_LIVENESS_SPEC.md  GATE_H8C_PROMETHEUS_METRICS_SPEC.md  GATE_L1_LLM_EGRESS_HARDENING_SPEC.md  GATE_P1_CONTEXT_CLAIM_CAPTURE_SPEC.md  GATE_P2_ERASURE_SPEC.md  GATE_P3_SIGNOFF_SPINE_SPEC.md  GATE_PEP_SUBCODE_SPEC.md  (+16 more)
docs/runbooks/: OPERATOR_SESSION.md  backup-restore.md  driver-supervision.md  migrations.md  smoke-run-report-2026-06-22.md  smoke-run-report-2026-06-23.md  smoke-run.md
scripts/: check_ftm_schema.py  gen_adr_index.py
scripts/dev/: gen_env.py  zitadel_provision.sh
src/worldmonitor/: __init__.py  backup.py  cli.py  erasure.py  review.py  settings.py
tests/: conftest.py  test_abstract_edge.py  test_contract_consistency.py  test_doc_truth_up.py  test_eval_harness.py  test_ftm_schema_vendored.py  test_gate_fleet_mandate.py  test_llm_egress_chokepoint.py  test_provenance_merge.py  test_smoke.py  test_stable_id.py
tests/fixtures/: opensanctions_entity.json
tests/integration/: test_active_gating.py  test_active_run_sandbox_ui.py  test_alias_cocommit.py  test_anchor_edge_write.py  test_api_graph_read.py  test_b1_crash_recovery.py  test_b1_signoff_idempotency.py  test_b2_poison_batch_isolation.py  test_b6_resolve_incompat.py  test_b6_signoff_poison.py  test_backfill.py  test_backup_restore_roundtrip.py  test_connector_instance.py  test_context_claim_lane.py  test_cti_pipeline.py  test_dashboard_api.py  test_dashboard_e2e.py  test_edge_provenance.py  test_entity_link_materialization.py  test_erasure.py  test_erasure_fixes.py  test_erasure_graph.py  test_erasure_scrub.py  test_extraction_pass.py  (+39 more)
(+357 files in other folders)
