[project]
name = "worldmonitor"
version = "0.0.1"
description = "Graph-native, ontology-first, plugin-extensible OSINT / geopolitical intelligence platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/damran/worldmonitor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldmonitor"]

# ---------------------------------------------------------------------------
# Dev tooling (installed by `uv sync`; PEP 735 dependency group)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["worldmonitor"]

# ---------------------------------------------------------------------------
# Pyright — strict on the package source
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=worldmonitor --cov-report=term-missing"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["worldmonitor"]
branch = true
