[project]
name = "worldmonitor"
version = "0.0.1"
description = "Graph-native, ontology-first, plugin-extensible OSINT / geopolitical intelligence platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "followthemoney>=4.9.2",
    "followthemoney-graph>=0.1.0",
    "neo4j>=6.2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "cryptography>=43",
    "jsonschema>=4.21",
    "boto3>=1.35",
    "splink>=4.0",
    "scipy>=1.11",
    "duckdb>=1.0",
    "nomenklatura>=4.10",
    "fingerprints>=1.2",
    "alembic>=1.18.4",
    "mcp>=1.28",
    "feedparser>=6.0.12",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/damran/worldmonitor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldmonitor"]

# ---------------------------------------------------------------------------
# Dev tooling (installed by `uv sync`; PEP 735 dependency group)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
    "testcontainers[minio,neo4j,postgres]>=4.14.2",
    "boto3-stubs[s3]>=1.35",
    "botocore-stubs>=1.43.14",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["worldmonitor"]

# ---------------------------------------------------------------------------
# Pyright — strict on the package source
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src"]
# Alembic env + generated migration scripts are DDL boilerplate, not app logic.
exclude = ["src/worldmonitor/db/migrations"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=worldmonitor --cov-report=term-missing"
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker (testcontainers); excluded from the default quality run",
]

[tool.coverage.run]
source = ["worldmonitor"]
branch = true
